--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +38,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
   cupertino_icons: ^1.0.2
   splashscreen: ^1.3.5
+  flutter_gifimage: ^1.0.1
 # The following section is specific to Flutter.
 flutter:
 
